# adk-a2a

./: .gitignore  README.md
agents/adk_nextjs/: README.md  __main__.py  agent.py  pyproject.toml
agents/crewai/: README.md  __main__.py  agent.py  pyproject.toml
agents/google_adk/: __main__.py  agent.py  pyproject.toml
host/: main.py  pyproject.toml
host/state/: host_agent_service.py
lib/: pyproject.toml
lib/hosts/multiagent/: pyproject.toml
